--- a/61030040/saveFileDialog/saveFileDialog/saveFileDialog.csproj
+++ b/61030040/saveFileDialog/saveFileDialog/saveFileDialog.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDD18ABD-6742-4B1A-BE86-9376D82D6AA5}</ProjectGuid>
+    <ProjectGuid>{6B49D695-6AFA-4EA2-A888-9E8C057D5202}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Lab10_WindowsFormProperties</RootNamespace>
-    <AssemblyName>Lab10_WindowsFormProperties</AssemblyName>
+    <RootNamespace>saveFileDialog</RootNamespace>
+    <AssemblyName>saveFileDialog</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
