--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ desktop.ini
 /61030006/SumTwoNumbers/.vs/SumTwoNumbers/v16/Server/sqlite3/db.lock
 /61030006/folderBrowser/.vs/folderBrowser/v16/Server/sqlite3/db.lock
 /61030006/colorDialog/.vs/colorDialog/v16/Server/sqlite3/db.lock
+.vs/ProjectSettings.json
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
